Fixes in zoom-slider. Slider will not be displayed on mobile devices - portrait mode. Default zoom level set to 3.

--- a/styles.css
+++ b/styles.css
@@ -177,6 +177,13 @@ header h1 {
     }
 }
 
+/* Hide the zoom slider in mobile portrait mode */
+@media only screen and (max-width: 767px) and (orientation: portrait) {
+    .zoom-slider-container {
+        display: none;
+    }
+}
+
 /* Collapsible section */
 .collapsible {
     background-color: #444;
